--- a/css/main.css
+++ b/css/main.css
@@ -2660,6 +2660,7 @@
   display: flex;
   flex-direction: row;
   margin: 3em 0 0 0;
+  z-index: 1;
 }
 @media (min-width: 310px) and (max-width: 399px) {
   #bottomTWO #midSEC #right #allONE #buttons {
