--- a/scss/_bottomTHREE.scss
+++ b/scss/_bottomTHREE.scss
@@ -7,7 +7,7 @@
   #bg {
     background-image: url('../images/bottomCOFFE.jpg');
     width: inherit;
-    height: 31em;
+    height: 31.5em;
     position: absolute;
     z-index: -1;
     filter: brightness(90%);
@@ -18,7 +18,7 @@
     }
 
     @media (min-width: 840px) and (max-width: 1259.9px) {
-      height: 48em;
+      height: 52em;
     }
   }
 
@@ -32,12 +32,15 @@
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: center;
       overflow: hidden;
 
       @media (min-width: 310px) and (max-width: 839.9px) {
         flex-direction: column;
         align-items: center;
+      }
+
+      @media (min-width: 1050px) and (max-width: 1259.99px) {
+        justify-content: center;
       }
 
       #left {
@@ -129,6 +132,10 @@
           font-weight: 700;
           color: rgb(77, 139, 85);
           border-bottom: 2px solid rgb(77, 139, 85);
+
+          @media (min-width: 310px) and (max-width: 350px) {
+            width: 9em;
+          }
         }
 
         #location {
@@ -196,6 +203,10 @@
           font-weight: 700;
           color: rgb(77, 139, 85);
           border-bottom: 2px solid rgb(77, 139, 85);
+
+          @media (min-width: 310px) and (max-width: 350px) {
+            width: 9em;
+          }
         }
 
         #email {
@@ -217,7 +228,7 @@
 
           #subscribe {
             width: 13em;
-            height: 4em;
+            height: 3.9em;
             margin-left: 1em;
             position: absolute;
             right: 9em;
@@ -275,6 +286,25 @@
             }
           }
         }
+      }
+    }
+
+    #lowerSEC {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      height: 5em;
+      margin-top: 4em;
+      align-items: center;
+      border-top: solid 2px rgb(39, 39, 39);
+
+      @media (min-width: 310px) and (max-width: 1259.99px) {
+        margin-top: 0;
+        align-items: end;
+      }
+
+      #one {
+        color: rgb(95, 95, 95);
       }
     }
   }
