--- a/scss/_bottomTHREE.scss
+++ b/scss/_bottomTHREE.scss
@@ -31,6 +31,7 @@
     #upperSEC {
       display: flex;
       flex-direction: row;
+      justify-content: center;
       flex-wrap: wrap;
       overflow: hidden;
 
@@ -39,8 +40,8 @@
         align-items: center;
       }
 
-      @media (min-width: 1050px) and (max-width: 1259.99px) {
-        justify-content: center;
+      @media (min-width: 310px) and (max-width: 1050px) {
+        justify-content: unset;
       }
 
       #left {
