--- a/scss/_bottomTHREE.scss
+++ b/scss/_bottomTHREE.scss
@@ -247,7 +247,7 @@
 
             @media (min-width: 310px) and (max-width: 399px) {
               width: 11em;
-              right: 11.5em;
+              right: 12.5em;
               margin-left: 0;
             }
 
@@ -256,11 +256,15 @@
             }
 
             @media (min-width: 399px) and (max-width: 470px) {
-              right: 11.5em;
+              right: 12.5em;
             }
 
             @include breakPoints(mobile) {
               margin-left: 0;
+            }
+
+            @include breakPoints(tablet) {
+              right: 10em;
             }
           }
         }
