--- a/css/main.css
+++ b/css/main.css
@@ -3825,7 +3825,7 @@
 @media (min-width: 310px) and (max-width: 399px) {
   #bottomTHREE #all #upperSEC #right #email #subscribe {
     width: 11em;
-    right: 11.5em;
+    right: 12.5em;
     margin-left: 0;
   }
 }
@@ -3836,12 +3836,17 @@
 }
 @media (min-width: 399px) and (max-width: 470px) {
   #bottomTHREE #all #upperSEC #right #email #subscribe {
-    right: 11.5em;
+    right: 12.5em;
   }
 }
 @media (min-width: 399px) and (max-width: 767px) {
   #bottomTHREE #all #upperSEC #right #email #subscribe {
     margin-left: 0;
+  }
+}
+@media (min-width: 767px) and (max-width: 1023px) {
+  #bottomTHREE #all #upperSEC #right #email #subscribe {
+    right: 10em;
   }
 }
 #bottomTHREE #all #upperSEC #right #agreement {
