--- a/scss/_bottomTHREE.scss
+++ b/scss/_bottomTHREE.scss
@@ -219,20 +219,31 @@
           align-items: center;
 
           input {
-            width: 20em;
-            height: 4em;
+            width: 60%;
+            height: 21lvh;
             padding: 1em;
             border: none;
             border-radius: 2em;
             outline: none;
+
+            @media (min-width: 310px) and (max-width: 350px) {
+              width: 47%;
+            }
+
+            @media (min-width: 350px) and (max-width: 399px) {
+              width: 52%;
+            }
+
+            @media (min-width: 399px) and (max-width: 450px) {
+              width: 55%;
+            }
           }
 
           #subscribe {
-            width: 13em;
-            height: 3.8em;
-            margin-left: 1em;
-            position: absolute;
-            right: 9.3em;
+            width: 35%;
+            height: 21lvh;
+            position: relative;
+            right: 5em;
             border: none;
             border-radius: 40px;
             background-color: rgb(123, 255, 141);
@@ -240,34 +251,12 @@
             color: #1d1d1d;
             transition: all 0.2s ease;
 
-            @media (min-width: 310px) and (max-width: 399px) {
-              width: 11em;
-              height: 4.1em;
-              right: 13em;
-              margin-left: 0;
+            @include breakPoints(small) {
+              width: 25%;
             }
 
-            @media (min-width: 310px) and (max-width: 350px) {
-              right: 15em;
-            }
-
-            @media (min-width: 399px) and (max-width: 470px) {
-              right: 13em;
-            }
-
-            @include breakPoints(mobile) {
-              height: 4.1em;
-              margin-left: 0;
-            }
-
-            @include breakPoints(tablet) {
-              height: 3.8em;
-              right: 10em;
-            }
-
-            @include breakPoints(laptop) {
-              height: 3.8em;
-              right: 11.5em;
+            @media (min-width: 399px) and (max-width: 450px) {
+              width: 30%;
             }
 
             &:hover {
