--- a/css/main.css
+++ b/css/main.css
@@ -3799,7 +3799,6 @@
 }
 #bottomTHREE #all #upperSEC #right #email input {
   width: 60%;
-  height: 21lvh;
   padding: 1em;
   border: none;
   border-radius: 2em;
@@ -3822,7 +3821,7 @@
 }
 #bottomTHREE #all #upperSEC #right #email #subscribe {
   width: 35%;
-  height: 21lvh;
+  height: 3.3em;
   position: relative;
   right: 5em;
   border: none;
