--- a/scss/_bottomTHREE.scss
+++ b/scss/_bottomTHREE.scss
@@ -220,7 +220,6 @@
 
           input {
             width: 60%;
-            height: 21lvh;
             padding: 1em;
             border: none;
             border-radius: 2em;
@@ -241,7 +240,7 @@
 
           #subscribe {
             width: 35%;
-            height: 21lvh;
+            height: 3.3em;
             position: relative;
             right: 5em;
             border: none;
