--- a/scss/_bottomTHREE.scss
+++ b/scss/_bottomTHREE.scss
@@ -220,6 +220,7 @@
 
           input {
             width: 60%;
+            height: 50px;
             padding: 1em;
             border: none;
             border-radius: 2em;
@@ -240,7 +241,7 @@
 
           #subscribe {
             width: 35%;
-            height: 3.3em;
+            height: 50px;
             position: relative;
             right: 5em;
             border: none;
