--- a/css/main.css
+++ b/css/main.css
@@ -3799,6 +3799,7 @@
 }
 #bottomTHREE #all #upperSEC #right #email input {
   width: 60%;
+  height: 50px;
   padding: 1em;
   border: none;
   border-radius: 2em;
@@ -3821,7 +3822,7 @@
 }
 #bottomTHREE #all #upperSEC #right #email #subscribe {
   width: 35%;
-  height: 3.3em;
+  height: 50px;
   position: relative;
   right: 5em;
   border: none;
