--- a/scss/_topONE.scss
+++ b/scss/_topONE.scss
@@ -1,18 +1,21 @@
 #topONE {
+  display: flex;
+  flex-direction: column;
+  row-gap: 40px;
   position: relative;
   width: inherit;
-  height: 52rem;
+  height: 110dvh;
 
   @include breakPoints(small) {
-    height: 42em;
+    height: 98dvh;
   }
 
   @include breakPoints(mobile) {
-    height: 38em;
+    height: 100dvh;
   }
 
-  @media (min-width: 399px) and (max-width: 443.99px) {
-    height: 43em;
+  @media (min-width: 499px) and (max-width: 767px) {
+    height: 90dvh;
   }
 
   #bgONE {
@@ -29,7 +32,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin-top: 2em;
+    margin-top: 35px;
 
     @include breakPoints(small) {
       margin-top: 0;
@@ -42,7 +45,7 @@
     #left {
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      column-gap: 10px;
       width: fit-content;
       align-items: center;
 
@@ -54,61 +57,42 @@
         display: none;
       }
 
-      @include breakPoints(tablet) {
-        margin-top: 2.5em;
-      }
-
       p {
-        color: rgb(244, 244, 244);
+        color: #f4f4f4;
         font-size: 14px;
       }
 
       #iconsONE {
         display: flex;
         flex-direction: row;
-        padding-left: 0.7em;
+        column-gap: 20px;
 
         #insta {
           background-image: url('/images/instagram.svg');
           width: 22px;
           height: 22px;
-          margin-right: 1.7em;
-
-          &:hover {
-            cursor: pointer;
-          }
+          cursor: pointer;
         }
 
         #x {
           background-image: url('/images/x.svg');
           width: 24px;
           height: 24px;
-          margin-right: 1.6em;
-
-          &:hover {
-            cursor: pointer;
-          }
+          cursor: pointer;
         }
 
         #telegram {
           background-image: url('/images/telegram.svg');
           width: 21px;
           height: 21px;
-          margin-right: 1.9em;
-
-          &:hover {
-            cursor: pointer;
-          }
+          cursor: pointer;
         }
 
         #youtube {
           background-image: url('/images/youtube.svg');
           width: 22px;
           height: 22px;
-
-          &:hover {
-            cursor: pointer;
-          }
+          cursor: pointer;
         }
       }
     }
@@ -116,32 +100,29 @@
     #mid {
       display: flex;
       flex-direction: column;
+      row-gap: 25px;
       width: max-content;
       align-items: center;
 
       @include breakPoints(small) {
-        margin-top: 1em;
+        margin-top: 20px;
       }
 
       @include breakPoints(mobile) {
-        margin-top: 1em;
+        margin-top: 20px;
       }
 
       #logo {
         background-image: url('../images/logo.png');
         width: 100px;
         height: 94px;
-
-        &:hover {
-          cursor: pointer;
-        }
+        cursor: pointer;
       }
 
       ul {
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
-        margin-top: 2em;
+        column-gap: 25px;
         list-style: none;
         text-transform: capitalize;
         font-size: 17px;
@@ -160,21 +141,14 @@
 
         #homeONE {
           width: fit-content;
-          color: rgb(123, 255, 141);
-
-          &:hover {
-            cursor: pointer;
-          }
+          color: #7bff8d;
+          cursor: pointer;
         }
 
         li {
           width: fit-content;
-          padding-left: 1.5em;
-          color: rgb(244, 244, 244);
-
-          &:hover {
-            cursor: pointer;
-          }
+          color: #f4f4f4;
+          cursor: pointer;
         }
       }
     }
@@ -182,7 +156,6 @@
     #right {
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
       width: fit-content;
       align-items: center;
 
@@ -194,46 +167,30 @@
         display: none;
       }
 
-      @include breakPoints(tablet) {
-        margin-top: 2.5em;
-      }
-
       #iconsTWO {
         display: flex;
         flex-direction: row;
-        padding-left: 0.7em;
+        column-gap: 40px;
 
         #user {
           background-image: url('/images/user.svg');
           width: 30px;
           height: 30px;
-          margin-right: 3.2em;
-
-          &:hover {
-            cursor: pointer;
-          }
+          cursor: pointer;
         }
 
         #bag {
           background-image: url('/images/bag.svg');
           width: 30px;
           height: 30px;
-          margin-right: 3.2em;
-
-          &:hover {
-            cursor: pointer;
-          }
+          cursor: pointer;
         }
 
         #search {
           background-image: url('/images/search.svg');
           width: 30px;
           height: 30px;
-          margin-right: 3.2em;
-
-          &:hover {
-            cursor: pointer;
-          }
+          cursor: pointer;
         }
       }
     }
@@ -242,16 +199,7 @@
   #title {
     display: flex;
     flex-direction: column;
-    margin-top: 8em;
     align-items: center;
-
-    @include breakPoints(small) {
-      margin-top: 4em;
-    }
-
-    @include breakPoints(mobile) {
-      margin-top: 3em;
-    }
 
     #one {
       font-size: 75px;
@@ -280,6 +228,10 @@
 
       @include breakPoints(mobile) {
         font-size: 55px;
+      }
+
+      @media (min-width: 419px) and (max-width: 499px) {
+        width: min-content;
       }
     }
 
