--- a/scss/_topTWO.scss
+++ b/scss/_topTWO.scss
@@ -1,30 +1,34 @@
 #topTWO {
   display: flex;
   flex-direction: column;
-  position: relative;
-  width: inherit;
+  width: 100%;
+  height: fit-content;
   align-items: center;
 
   #bgONE {
     background-image: url('../images/leafPATTERNS.png');
-    width: inherit;
-    height: 22em;
+    width: 100%;
+    height: 60dvh;
     background-color: rgb(77, 139, 85);
 
     @include breakPoints(small) {
-      height: 10em;
+      height: 30dvh;
     }
 
     @include breakPoints(mobile) {
-      height: 11em;
+      height: 28dvh;
+    }
+
+    @media (min-width: 499px) and (max-width: 767px) {
+      height: 35dvh;
     }
 
     @include breakPoints(tablet) {
-      height: 12em;
+      height: 38dvh;
     }
 
     @include breakPoints(laptop) {
-      height: 17.5em;
+      height: 44dvh;
     }
   }
 
@@ -33,27 +37,32 @@
     position: absolute;
     width: 51.6em;
     height: 40em;
-    top: -15em;
-    transform: scale(77%);
+    top: 35em;
+    transform: scale(70%);
     background-repeat: no-repeat;
 
     @include breakPoints(small) {
-      top: -18em;
-      transform: scale(35%);
+      top: 24em;
+      transform: scale(36%);
     }
 
     @include breakPoints(mobile) {
-      top: -18em;
+      top: 24em;
       transform: scale(40%);
     }
 
+    @media (min-width: 499px) and (max-width: 767px) {
+      top: 19em;
+      transform: scale(48%);
+    }
+
     @include breakPoints(tablet) {
-      top: -20em;
+      top: 25em;
       transform: scale(55%);
     }
 
     @include breakPoints(laptop) {
-      top: -16em;
+      top: 28em;
       transform: scale(60%);
     }
   }
