--- a/scss/_topONE.scss
+++ b/scss/_topONE.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   row-gap: 40px;
   position: relative;
-  width: inherit;
+  width: 100%;
   height: 110dvh;
 
   @include breakPoints(small) {
@@ -15,7 +15,15 @@
   }
 
   @media (min-width: 499px) and (max-width: 767px) {
-    height: 90dvh;
+    height: 85dvh;
+  }
+
+  @include breakPoints(tablet) {
+    height: 100dvh;
+  }
+
+  @include breakPoints(laptop) {
+    height: 105dvh;
   }
 
   #bgONE {
