--- a/scss/_topTWO.scss
+++ b/scss/_topTWO.scss
@@ -4,15 +4,16 @@
   width: 100%;
   height: fit-content;
   align-items: center;
+  position: relative;
 
   #bgONE {
     background-image: url('../images/leafPATTERNS.png');
     width: 100%;
-    height: 60dvh;
+    height: 45dvh;
     background-color: rgb(77, 139, 85);
 
     @include breakPoints(small) {
-      height: 30dvh;
+      height: 28dvh;
     }
 
     @include breakPoints(mobile) {
@@ -28,7 +29,7 @@
     }
 
     @include breakPoints(laptop) {
-      height: 44dvh;
+      height: 42dvh;
     }
   }
 
@@ -37,32 +38,32 @@
     position: absolute;
     width: 51.6em;
     height: 40em;
-    top: 35em;
+    top: -16em;
     transform: scale(70%);
     background-repeat: no-repeat;
 
     @include breakPoints(small) {
-      top: 24em;
+      top: -16em;
       transform: scale(36%);
     }
 
     @include breakPoints(mobile) {
-      top: 24em;
+      top: -16em;
       transform: scale(40%);
     }
 
     @media (min-width: 499px) and (max-width: 767px) {
-      top: 19em;
+      top: -16em;
       transform: scale(48%);
     }
 
     @include breakPoints(tablet) {
-      top: 25em;
+      top: -16em;
       transform: scale(55%);
     }
 
     @include breakPoints(laptop) {
-      top: 28em;
+      top: -16em;
       transform: scale(60%);
     }
   }
